# qtcreator-discord-rich-presence-plugin

./: CMakeLists.txt  DiscordRichPresencePlugin.json.in  README.md
.github/workflows/: build.yml
cmake/: FindDiscordGameSDK.cmake
lang/: DiscordRichPresencePlugin_vi.ts
src/: plugin.cpp  plugin.hpp  plugincommon.hpp  pluginconstants.hpp.in
